--- a/generic.html
+++ b/generic.html
@@ -52,7 +52,7 @@
 				</p>
 				<p style="text-align: justify;">También el servicio debe ofrecer la capacidad de compartir archivos. Si
 					los archivos son
-					imágenes o video el sistema
+					imágenes o videos el sistema
 					ofrecería la capacidad de organizar y presentar las imágenes. Por ejemplo, la aplicación “Fotos” de
 					Google. Además, el sistema tendría un servidor streaming para compartir y reproducir video.</p>
 				<p style="text-align: justify;"><span style="color:white">Servicios realizados:</span></p>
