--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>HABILIDADES Y CONOCIMIENTOS</h2>
-				<p>Me destacó por ser una persona autodidacta, que aprende rápido y maneja situaciones bajo presión. Soy
-					una persona que no para hasta lograr sus objetivos y que siempre quiere ser el mejor en lo que hace.
+				<p>Me destaco por ser una persona autodidacta, aprendo rápido y sé manejar situaciones bajo presión. Por otro lado,
+					no paro hasta lograr mis objetivos y siempre quiero sobresalir en todo lo que hago.
 					<br><br>
-					Cuento con conocimiento en las siguientes tecnologías y lenguajes de programación que
+					Cuento con conocimientos en las siguientes tecnologías y lenguajes de programación que
 					utilizo comúnmente para la elaboración de soluciones:
 				</p>
 				<h2>Tecnologías Principales</h2>
@@ -201,7 +201,7 @@
 						<h3>MySQL</h3>
 						<p style="text-align: justify;">MySQL es un sistema de gestión de base de datos, no me considero
 							un DBA pero sin duda esta es
-							una herramienta muy útil y la que más he utilziado a lo largo de mi trayectoria.</p>
+							una herramienta muy útil y la que más he utilizado a lo largo de mi trayectoria.</p>
 					</section>
 				</div>
 				<h2>Otros Conocimientos</h2>
@@ -235,9 +235,9 @@
 						<span class=" icon solid major"><img style="width: 100%; padding-top: 13px;"
 								src="https://davidlaym.com/img/posts/featured/nodejs.png" alt=""></span>
 						<h3>Express/NodeJS</h3>
-						<p style="text-align: justify;">Esta solucion tecnológica me llamó mucho la atención gracias a
+						<p style="text-align: justify;">Esta solución tecnológica me llamó mucho la atención gracias a
 							su
-							escalabilidad y sus modulos de desarrollo, me gustaría seguir profundizando en esta
+							escalabilidad y sus módulos de desarrollo, me gustaría seguir profundizando en esta
 							tecnología.</p>
 					</section>
 				</div>
@@ -248,7 +248,7 @@
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>CONTACTO</h2>
-				<p>Si te interesó esta breve descripción de mi perfil laboral, no dudes en contactar conmigo...</p>
+				<p>Si te interesó esta breve descripción de mi perfil laboral, no dudes en ponerte en contacto conmigo...</p>
 				<h3>Información General</h3>
 				<div class="split style1">
 					<section>
