--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 								src="https://play-lh.googleusercontent.com/5e7z5YCt7fplN4qndpYzpJjYmuzM2WSrfs35KxnEw-Ku1sClHRWHoIDSw3a3YS5WpGcI"
 								alt=""></span>
 						<h3>Flutter</h3>
-						<p style="text-align: justify;">Utilice esta tecnología para el desarrollo de un aplicativo
+						<p style="text-align: justify;">Utilicé esta tecnología para el desarrollo de un aplicativo
 							móvil y me llamó mucho la atención la facilidad para desarrollar interfaces de usuario.</p>
 					</section>
 					<section>
