Update NavBar and CV (2)

--- a/generic.html
+++ b/generic.html
@@ -21,10 +21,19 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="title">Mis Proyectos</a>
+
+		<nav style="position: absolute;">
+			<ul id="especial">
+				<li><a class="buttonEspecial" href="index.html">Portafolio </a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="index.html#one">Mis Proyectos</a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="generic.html"> Streams For Labs</a></li>
+			</ul>
+		</nav>
 		<nav>
 			<ul>
-				<li><a href="index.html#one">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="generic.html" class="active">Descripción</a></li>
 				<li><a href="elements.html">Documentación</a></li>
 			</ul>
