--- a/Descripcion_DDA.html
+++ b/Descripcion_DDA.html
@@ -21,8 +21,16 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="title">Mis Proyectos</a>
-		<nav>
+		<nav style="position: absolute;">
+			<ul id="especial">
+				<li><a class="buttonEspecial" href="index.html">Portafolio </a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="index.html#one">Mis Proyectos</a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="Descripcion_DDA.html">DDA BOOKINGS</a></li>
+			</ul>
+		</nav>
+		<nav>	
 			<ul>
 				<li><a href="index.html#one">Home</a></li>
 				<li><a href="Descripcion_DDA.html" class="active">Descripción</a></li>
