--- a/elements.html
+++ b/elements.html
@@ -21,7 +21,15 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="title">Mis Proyectos</a>
+		<nav style="position: absolute;">
+			<ul id="especial">
+				<li><a class="buttonEspecial" href="index.html">Portafolio </a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="index.html#one">Mis Proyectos</a></li>
+				<li class="linea">></li>
+				<li><a class="buttonEspecial" href="generic.html"> Streams For Labs</a></li>
+			</ul>
+		</nav>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
