--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<p style="text-align: center; font-size: 1em;">“Programa siempre tu código como si el tipo que va a
 					tener que mantenerlo en el futuro fuera un violento psicópata que sabe dónde vives”. <br>
 					- Martin Goldin</p>
-				<div style="text-align: center;">
+				<div class="container_Icons_Header" style="text-align: center;">
 					<img height="50" src="https://www.gmkfreelogos.com/logos/J/img/Java-3.gif">
 					<img height="50"
 						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png">
@@ -58,7 +58,7 @@
 						src="https://camo.githubusercontent.com/70ea199263787f23ad0f1feaf0c265d3baeb4286dd7089aa56ece4f73ee99f94/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f626f6f7473747261702d352d312e737667">
 
 				</div>
-				<div style="text-align: center;">
+				<div class="container_Icons_Header" style="text-align: center;">
 					<img height="50"
 						src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png">
 					<img height="50" src="https://pluspng.com/img-png/nodejs-logo-png-node-js-development-296.png">
