--- a/elements.html
+++ b/elements.html
@@ -143,7 +143,7 @@
 						El usuario podrá ver con quien ha compartido el archivo y su fecha.
 					</p>
 					<hr>
-					<h3>Adminstration</h3>
+					<h3>Administration</h3>
 					<p style="text-align: justify;">Esta sección es la encargada de agrupar las opciones de
 						configuración de un usuario
 						administrador.
