--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<section id="sidebar">
 		<div class="inner">
 			<nav>
-				<div id="content-Lottie1"></div>
+				<div id="content-Lottie1" class ="lottie-component"></div>
 				<ul>
 					<li><a href="#intro">¿Quién Soy?</a></li>
 					<li><a href="#one">Mis Proyectos</a></li>
