--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									Python y
 									C#.</span> Además cuento con
 								conocimientos en <span style="color:white">Front-End</span> y <span
-									style="color: white">Back-End ⚙️</span> en <span style="color:white"> React,
+									style="color: white">Back-End ⚙️</span> en <span style="color:white"> React, .Net Framework y Core,
 									JavaScript,
 									JQuery,
 									HTML y CSS.</span> En un futuro quiero llegar a dominar
