--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									style="color: white">Back-End ⚙️</span> en <span style="color:white"> React, .Net Framework y Core,
 									JavaScript,
 									JQuery,
-									HTML y CSS.</span> En un futuro quiero llegar a dominar
+									HTML, CSS y más.</span> En un futuro quiero llegar a dominar
 								Scrum
 								y me gustaría trabajar para una empresa que valore mis habilidades y pueda seguir
 								enriqueciendo
