Update CV and header description

--- a/index.html
+++ b/index.html
@@ -112,17 +112,16 @@
 								conocimiento.
 							</p>
 							<p style="margin-bottom: 0;">
-								Actualmente estoy realizando mis prácticas empresariales en <span
+								Actualmente estoy trabajando para <span
 									style="color:white">"Sistemas
-									y Computadores S.A" </span> para
-								completar mi requisito de grado. Esta empresa brinda soluciones de software
+									y Computadores S.A"</span>, esta empresa brinda soluciones de software
 								principalmente
 								para
 								entidades gubernamentales 🔍. Me encuentro desempeñando el cargo de <span
 									style="color:white">implementador y
 									desarrollador de software 🚀</span> para el proyecto de publicaciones que asocia
 								todos los proyectos de la
-								entidad. Todo esto siguiendo la <span style="color:white">metodología DevOps</span> para
+								entidad. Todo esto, siguiendo la <span style="color:white">metodología DevOps</span> para
 								lograr
 								una
 								mayor organización en el
