--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
-	<script defear src="https://app.embed.im/snow.js"></script>
+	<script defer src="https://app.embed.im/snow.js"></script>
 </head>
 
 <body class="is-preload">
