--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 					<section id="textHeader2">
 						<div id="scrollText" class="disableExpandir" style="text-align: justify; overflow: hidden; ">
 							<p>Mi nombre es <span style="color:white">Andrés Felipe Londoño
-									Campos,</span> estudiante de último
-								semestre de Ingeniería de
+									Campos,</span> estudiante graduado de Ingeniería de
 								Sistemas e
 								Informática de
 								la
@@ -96,15 +95,10 @@
 								cosas
 								nuevas 📚. Por un lado, me destaco por programar en lenguajes como <span
 									style="color:white">
-									Java,
-									Python y
-									C#.</span> Además cuento con
+									C#,
+									Java y Python.</span> Además cuento con
 								conocimientos en <span style="color:white">Front-End</span> y <span
-									style="color: white">Back-End ⚙️</span> en <span style="color:white"> React, .Net
-									Framework y Core,
-									JavaScript,
-									JQuery,
-									HTML, CSS y más.</span> En un futuro quiero llegar a dominar
+									style="color: white">Back-End ⚙️</span> en <span style="color:white">JavaScript, JQuery, HTML, CSS y más.</span> Los frameworks en los que principalmente me enfoco para realizar soluciones informáticas son .Net Framework y Core, React y Java NetBeans. En un futuro quiero llegar a dominar
 								Scrum
 								y me gustaría trabajar para una empresa que valore mis habilidades y pueda seguir
 								enriqueciendo
@@ -119,9 +113,7 @@
 								para
 								entidades gubernamentales 🔍. Me encuentro desempeñando el cargo de <span
 									style="color:white">implementador y
-									desarrollador de software 🚀</span> para el proyecto de publicaciones que asocia
-								todos los proyectos de la
-								entidad. Todo esto, siguiendo la <span style="color:white">metodología DevOps</span> para
+									desarrollador de software Full Stack🚀</span> para el servicio del "Núcleo de Ingeniería", el cual asocia todos los proyectos de la entidad. En resumen, es un equipo de desarrollo especializado en dar apoyo a todos los proyectos de la compañía para dar cumpliento con tiempos de entrega urgentes. Todo esto, siguiendo la <span style="color:white">metodología DevOps</span> para
 								lograr
 								una
 								mayor organización en el
